<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".features.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:layout_marginStart="40dp"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="1dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/awards_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/award"
                android:textColor="@color/dimgray"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/enter_your_email_address_to_sign_in_and_continue"
                android:textColor="@color/gray"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_login"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>