<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lyt_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="horizontal">

            <View
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/name_toolbar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="Filter"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black" />

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                app:srcCompat="@drawable/ic_close_black_24dp"
                android:paddingStart="@dimen/spacing_middle"
                android:paddingEnd="@dimen/spacing_middle" />

        </LinearLayout>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="20dp">

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all_filter"
            android:layout_marginBottom="20dp"
            android:textColor="@color/royalblue"
            android:textStyle="bold"
            android:background="@drawable/textview_clear_filter"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poin_needed"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_min"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    tools:text="IDR 10.000"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_max"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:textSize="18sp"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    tools:text="IDR 500.000" />
            </LinearLayout>
        </LinearLayout>

        <com.jaygoo.widget.RangeSeekBar
            android:id="@+id/rangeSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:rsb_progress_color="@color/royalblue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/awards_type"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/rb_alltype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    android:text="@string/all_type"/>
                <RadioButton
                    android:id="@+id/rb_vouchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    android:text="@string/vouchers"/>
                <RadioButton
                    android:id="@+id/rb_products"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    android:text="@string/products"/>
                <RadioButton
                    android:id="@+id/rb_others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/royalblue"
                    android:textStyle="bold"
                    android:text="@string/others"/>
            </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btn_cari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_filter"
            android:text="@string/filter"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="500dp" />
    </LinearLayout>
</LinearLayout>